# ship1000x

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
config/: line_classification.yaml  privacy.example.yaml
docs/: ARCHITECTURE.md  COLLECTORS.md  COVERAGE.md  METHODOLOGY.md  PRIVACY.md  QUICKSTART.md  TRUST_SCORE.md
docs/assets/: SCREENSHOTS_TODO.md  calibrate.txt  compare-modes.txt  highlights.txt  pulse.txt
ship1000x/: __init__.py  cli.py
ship1000x/collectors/: anthropic_usage.py  claude_code.py  cline.py  codex.py  codex_desktop.py  codex_macapp.py  codex_sqlite.py  cursor.py  git_multi.py  mac_system.py  openai_usage.py  openclaw.py  shell.py  web_exports.py
ship1000x/core/: __init__.py  cadence.py  classifier.py  config_migration.py  consent_wizard.py  discovery.py  health.py  intervals.py  line_classifier.py  pricing.py  privacy.py  rollup.py  scheduler.py  setup_wizard.py  storage.py  unified_metrics.py
ship1000x/exporters/: insights_push.py  markdown_report.py  s3_push.py
ship1000x/insights/: benchmarks.py  compare.py  engine.py  multiplier.py  profile.py  signals.py  trust_score.py
ship1000x/web/: __init__.py  app.py
ship1000x/web/templates/: base.html  overview.html  projects.html
tests/: test_caps.py  test_consent_wizard.py  test_dashboard_smoke.py  test_insights.py  test_intervals.py  test_line_classifier.py  test_trust_score.py  test_unified_metrics.py
